# ennchan-langchain-rag

./: .gitignore  RAG_PoC.ipynb  README.md  Search_PoC.ipynb  Untitled.ipynb  app.py  config.example.json  ennchan_rag_diagram.drawio  requirements.txt
ennchan_interface_cmd/: app.py
ennchan_rag_dev/: README.md  app.py  pyproject.toml
ennchan_rag_dev/ennchan_rag/: __init__.py  ask.py  config.py
ennchan_rag_dev/ennchan_rag/core/: __init__.py  context.py  model.py  state.py
ennchan_rag_stg/: README.md  pyproject.toml
ennchan_rag_stg/ennchan_rag/: __init__.py  placeholder.py
ennchan_search_dev/: README.md  pyproject.toml
ennchan_search_dev/ennchan_search/core/: model.py  search.py
ennchan_search_dev/ennchan_search/extractor/: extractorModel.py
src/: QAModel.py  config.py  configLoader.py  contextProcessor.py  docsChecker.py  docsLoader.py  fallbackClass.py  interfaces.py  memoryHandler.py  modelLoader.py  quantizationHandler.py  quantizationLoader.py  retrievalStrategy.py  similaritySearchRetrieval.py  textLoaderAdapter.py  webLoaderAdapter.py
