[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ennchan-rag"
version = "0.1.0-alpha"
description = "RAG implementation using LangChain (Placeholder)"
readme = "README.md"
authors = [
    {name = "Nick Ecuacion", email = "nicololynsuecuacion@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "random2>=1.0.1",
]
